# lvgl

./: .gitignore  CMakeLists.txt  littlevglConfig.cmake
lv_drivers/display/: R61581.h  SSD1963.h  ST7565.h  fbdev.h  monitor.h
lv_drivers/indev/: AD_touch.h  FT5406EE8.h  XPT2046.h  evdev.c  evdev.h  keyboard.h  mouse.h
lvgl/: lv_conf.h  lv_drv_conf.h  lv_ex_conf.h
lvgl/lv_core/: lv_group.h  lv_indev.c  lv_obj.h  lv_refr.c  lv_style.c  lv_vdb.c  lv_vdb.h
lvgl/lv_draw/: lv_draw.c  lv_draw_rbasic.h  lv_draw_vbasic.c  lv_draw_vbasic.h
lvgl/lv_hal/: lv_hal_tick.c
lvgl/lv_misc/: lv_anim.h  lv_font.c  lv_font.h  lv_fs.h  lv_mem.c  lv_task.c  lv_txt.c  lv_ufs.h
lvgl/lv_objx/: lv_bar.c  lv_bar.h  lv_btn.c  lv_btn.h  lv_btnm.c  lv_btnm.h  lv_cb.c  lv_cb.h  lv_chart.c  lv_chart.h  lv_cont.c  lv_cont.h  lv_ddlist.c  lv_ddlist.h  lv_gauge.c  lv_gauge.h  lv_img.c  lv_img.h  lv_kb.c  lv_kb.h  lv_label.c  lv_label.h  lv_led.c  lv_led.h  lv_line.c  lv_line.h  lv_list.c  lv_list.h  lv_lmeter.c  lv_lmeter.h  lv_mbox.c  lv_mbox.h  lv_objx_templ.c  lv_objx_templ.h  lv_page.c  lv_page.h  lv_roller.c  lv_roller.h  lv_slider.c  lv_slider.h  (+8 more)
lvgl/lv_themes/: lv_theme.h
